# mnist-digit-recognition-cpp

./: CMakeLists.txt  README.md  main.cpp
